--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,8 @@
 
 .my-avatars {
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
